--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,14 @@
               "node_modules/primeng/resources/themes/lara-dark-purple/theme.css",
               "node_modules/primeng/resources/primeng.min.css"
             ],
+            "allowedCommonJsDependencies": [
+              "jspdf",
+              "raf",
+              "core-js",
+              "html2canvas",
+              "dompurify",
+              "rgbcolor"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -42,13 +50,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "3mb"
+                  "maximumWarning": "5mb",
+                  "maximumError": "10mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "5kb",
-                  "maximumError": "10kb"
+                  "maximumWarning": "25kb",
+                  "maximumError": "50kb"
                 }
               ],
               "outputHashing": "all"
