--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
-    "firebase": "^9.18.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
+    "firebase": "^9.23.0",
     "jspdf": "^2.5.1",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
